test/yaml/testdata/output/backend-protocol/grpc-with-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: example.com
    name: example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grpc-path-ingress-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /path-ingress1
    name: rule-1-prefix-path-ingress1
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-path-ingress-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: user-service
      port: 9090
    matches:
    - method:
        service: grpc.service.v1.UserService
        type: PathPrefix
    name: rule-0-prefix-grpc-service-v1-userservice
status:
  parents: null
