test/yaml/testdata/output/backend-protocol/grpc-with-path.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: grpc.example.com
    name: grpc-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-path-ingress-grpc-example-com
  namespace: namespace1
spec:
  hostnames:
  - grpc.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: user-service
      port: 9090
    matches:
    - method:
        service: grpc.service.v1.UserService
        type: PathPrefix
    name: rule-0-prefix-grpc-service-v1-userservice
  - backendRefs:
    - name: product-service
      port: 9090
    matches:
    - method:
        service: grpc.service.v1.ProductService
        type: PathPrefix
    name: rule-1-prefix-grpc-service-v1-productservice
status:
  parents: null
