test/yaml/testdata/output/backend-protocol/unsupported-protocol.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: fcgi.example.com
    name: fcgi-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fcgi-ingress-fcgi-example-com
  namespace: namespace1
spec:
  hostnames:
  - fcgi.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: fcgi-service
      port: 8009
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
